docs: java-debug plan — mark adapter built + desktop spike PASS; on-device leg-2 is the remaining gate